# TPIDS-19-wutang

./: .gitignore  .python-version  README.md  docker-compose.yaml  docker-compose.yml  justfile
.github/workflows/: deploy_backend.yaml
Backend/: api.py  models.py  sql.py  tablas-sql.sql
Frontend/: Dockerfile  api.py  app.py  http_client.py  requirements.txt
Frontend/static/css/: rooms.css  style.css
Frontend/static/fonts/: icomoon.css
Frontend/static/images/: Bar.jpg:Zone.Identifier  Discoteca.jpg:Zone.Identifier  Gimnasio.jpg:Zone.Identifier  about-us-brothers.jpg:Zone.Identifier  about-us.jpg:Zone.Identifier  camera_about_us.jpg:Zone.Identifier  hotel-cordoba.jpg:Zone.Identifier  hotel_pisos.png:Zone.Identifier  llave_hotel.png:Zone.Identifier  pileta_about_us.jpg:Zone.Identifier  security_man_about_us.jpg:Zone.Identifier
Frontend/static/js/: FAQ.js  carrousel.js  checkbox.js  navScrolled.js  (+1 more)
Frontend/templates/: 404.html  500.html  FAQ.html  about.html  base.html  consultar_reserva.html  contact.html  index.html  login.html  recover.html  register.html  reservas.html  rooms.html
backend/: .env.TEMPLATE  Dockerfile  Dockerfile.dev  api.py  app.py  pyproject.toml  requirements.txt  sql.py
backend/api/: __init__.py  routes.py  schema.py  tablas.sql
backend/backend/: app.py
backend/backend/api/: __init__.py  routes.py
backend/backend/models/: __init__.py  models.py
backend/database/: insert_data.sql  tablas.sql  triviumdb.sql
backend/models/: __init__.py  models.py
init-scripts/: triviumdb.sql
mobile/: README.md  buildozer.spec  main.py
(+1 files in other folders)
