[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Gabriela Yanes <gabriela.yanes@harley-davidson.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
